# ATPESC18

./: .gitignore  README.md
fpga/fpga_opencl_trn/: README.md  aoc-env.sh
fpga/fpga_opencl_trn/OpenCL_ndrange/device/: SimpleKernel.aocr  SimpleKernel.cl
fpga/fpga_opencl_trn/OpenCL_ndrange/device/SimpleKernel/: SimpleKernel.1.bc  SimpleKernel.bc
fpga/fpga_opencl_trn/OpenCL_ndrange/host/: 49210.cobaltlog  SimpleOpenCLApp  main.cpp  utility.cpp
fpga/fpga_opencl_trn/OpenCL_single/device/: SimpleKernel.aocx  SimpleKernel.cl
fpga/fpga_opencl_trn/OpenCL_single/host/: 49059.cobaltlog  Makefile  SimpleOpenCLApp  atpesc-fpga.result.txt  main.cpp  utility.h
gpu/cuda/handsOn/lbm/: cudaLBM  cudaLBM.cu  list.txt  openmpLBM
gpu/cuda/tuto_class/: Makefile  addVecs  addVecs.cpp  addVecs.cu  inplace_rev-array  inplace_rev-array.cu  rev-array  rev-array.cu
legion/Blur/: blur.rg  blur_solution.rg  rpblursol.sh
legion/DependentPartitioning/: 5.rg
legion/Overview/: 1.rg
legion/Partitioning/: 1.rg  rp1.sh  rp2.sh  rp3.sh  rp4.sh  rpx2.sh  rs1.sh  rs2.sh  rs3.sh  rs5.sh  rsx2.sh
legion/Pi/: rp1.sh  rpx1.sh
legion/Regions/: rp5.sh  rs3.sh  rs4.sh  rs5.sh
legion/Tasks/: rp1.sh  rp2.sh  rp3.sh  rp4.sh  rs4.sh
mpi/: Makefile  Makefile.in  README  config.status  configure  configure.ac
mpi/autom4te.cache/: output.1  requests  traces.0  traces.1
mpi/code-examples-c-h1/: Makefile.in  mlife2d-fence.c  mlife2d.c  runexample
mpi/code-examples-c-h3/: .8192res.txt.swp  4096res-fence.txt  4096res-lock.txt  8192res-fence.txt  8192res-lock.txt  mlife2d-fence.c  mlife2d-io-stdout1.c  mlife2d.c  mlife2d.h  mlifeconf.h  moptions.c  mtiming.c
mpi/code-examples-c-orig/: Makefile  mlife2d-pt2ptsnd.c  mlife2d.c  mlifeconf.h.in  patch.c
mpi/code-examples-f9x/: Makefile  Makefile.in  mlife2d-fence.f90  mlife2d-io-stdout.f90  mlife2d-pt2pt.f90  mlife2d-pt2pt9.f90  mlife2d-pt2ptsnd.f90  mlife2d-pt2ptuv.f90  mlife2d.f90  mlife2dmod.f90  moptions.f90  msleep.f90  mtiming.f90  patch.f90  runexample  sampleruns
numerics/adjoint/: ex5opt.ob  ex5opt_ic  makefile
numerics/hand_coded_heat/: heat  makefile
numerics/hand_coded_heat/heat_results/: clargs.out  heat_results_soln_final.curve
numerics/hand_coded_heat/heat_steady/: clargs.out  heat_results_soln_00000.curve
numerics/hand_coded_heat/wall_wood/: clargs.out  wall_wood_soln_00000.curve  wall_wood_soln_final.curve
numerics/krylov_amg/: 1608892.cobaltlog  1608903.cobaltlog  Makefile  ij  ij.c  run1-k40.txt  run1-k70.txt  run1-k75.txt  run1.txt  struct  struct.c  test_begin.txt
numerics/krylov_amg/hypre/: Makefile  ex1  ex11  ex12  ex12f  ex13  ex14  ex15  ex16  ex2  ex3  ex4  ex5  ex5f  ex6  ex7  ex8  ex9
numerics/time_integrators/: advection-ode  advection-ode.cpp  elasticity-snes  elasticity-snes.cpp  makefile  rc-advection-impl
openmp/openmp_tuto/: Makefile  hello_world.c  omp_task_example.c
openmp/openmp_tuto/linked_prac/: Makefile  linked_parallel.c  linked_parallel_task.c  linked_serial.c
openmp/openmp_tuto/mandel_prac/: Makefile  mandel_prob.c  mandel_sol.c
openmp/openmp_tuto/pi_calculation/: Makefile  pi_parallel.c  pi_parallel_fs.c  pi_parallel_loop.c  pi_parallel_pad.c  pi_parallel_task.c  pi_serial.c
viz/: argonne.pvsc
viz/jupyter/: JupyterOnCooley.md  README.md
viz/jupyter/pv_blood_flow/: 1611097.cobaltlog  1611097.output  1611098.cobaltlog  1611098.output  ParaView-Notebook.ipynb  blood_flow_state_01.py
viz/jupyter/pv_blood_flow/.ipynb_checkpoints/: ParaView-Notebook-checkpoint.ipynb
viz/jupyter/sensei_catalyst/: 1611253.cobaltlog  1611253.error  1611253.output  SenseiCatalyst-Notebook.ipynb  oscillator.xml  sensei.sh
viz/jupyter/sensei_catalyst/.ipynb_checkpoints/: SenseiCatalyst-Notebook-checkpoint.ipynb
viz/jupyter/sensei_libsim/: oscillator.xml
viz/jupyter/sensei_libsim/.ipynb_checkpoints/: SenseiLibsim-Notebook-checkpoint.ipynb
viz/jupyter/simple_fluid/.ipynb_checkpoints/: Fluid-checkpoint.ipynb
(+6 files in other folders)
